--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -17,13 +17,6 @@ body {
 	background-color: #7E8F7C;
 	width: 500px;
 	height: 500px;
-	display: table;
-}
-
-#tag-card-one > #tag-name {
-	display: table-cell;
-	text-align: center;
-	vertical-align: middle;
 	color: white;
 	font-size: 50px;
 }
@@ -35,13 +28,6 @@ body {
 	background-color: #A8CD1B;
 	width: 200px;
 	height: 200px;
-	display: table;
-}
-
-#tag-card-two > #tag-name {
-	display: table-cell;
-	text-align: center;
-	vertical-align: middle;
 	color: white;
 	font-size: 20px;
 }
@@ -53,7 +39,8 @@ body {
 	background-color: #558C89;
 	width: 100px;
 	height: 100px;
-	display: table;
+	color: white;
+	font-size: 15px;
 }
 
 #tag-card-four {
@@ -63,13 +50,27 @@ body {
 	background-color: #E44424;
 	width: 100px;
 	height: 100px;
-	display: table;
-}
-
-#tag-card-three > #tag-name, #tag-card-four > #tag-name {
-	display: table-cell;
-	text-align: center;
-	vertical-align: middle;
 	color: white;
 	font-size: 15px;
+}
+
+#submit-button {
+	display: block;
+    margin: 0px auto 0px auto;
+}
+
+#idea-body {
+	resize: none;
+}
+
+.btn-default {
+	border-radius: 0px;
+}
+
+.list-group-item {
+	cursor: pointer;
+}
+
+#change-view-button {
+	float: right;
 }
