Added button clicks to add/remove filter tags

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -13,6 +13,13 @@ body {
 	margin: 5px;
 }
 
+#tag-card-filtered {
+	color: white;
+	border-radius: 0px;
+	background-color: #D9853B;
+	margin: 5px;
+}
+
 #tag-card:hover {
 	background-color: #74AFAD;
 }
