Initial design of suggestion box

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -65,3 +65,24 @@ textarea {
 	display: inline-block;
 	margin: 5px;
 }
+
+#suggestion {
+	display: block;
+	position: absolute;
+}
+
+#tag-search > div > .form-group {
+	margin-bottom: 0px;
+}
+
+#suggestion > .list-group {
+	margin-bottom: 0px;
+}
+
+#suggestion > .list-group > .list-group-item {
+	padding: 5px 7px;
+}
+
+#selected {
+	background-color: #ECECEA;
+}
