Button color changed

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,9 +4,9 @@ body {
 }
 
 #button {
-    color: #A8CD1B;
+    color: #118C4E;
 	background-color: transparent;
-	border: 1px solid #A8CD1B;
+	border: 1px solid #118C4E;
 }
 
 #tag-card {
